Adjusting CSS to work with the reset, and to work with Firefox. Using http://tux.cdl.ucf.edu/~co344095/TRsiteRedesign/home.php as a reference for now. Currently, the nav's triangles are still broken. Currently working on padding for most elements, and making sure elements are aligned/sized correctly

--- a/css/header.css
+++ b/css/header.css
@@ -16,6 +16,7 @@
 		margin: auto;
 		position: relative;
 		background: #25548e;
+		height: 80px;
 	}
 	nav {
 		margin: 0 auto;
@@ -30,6 +31,7 @@
 		.navlist li {
 			display: inline-block;
 			list-style-type: none;
+			height: 80px;
 		}
 		.navlist li a {
 			color: #FFF;
