--- a/css/reset.css
+++ b/css/reset.css
@@ -29,7 +29,8 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
+	/* Commented out for font problems */
+	/*line-height: 1;*/
 }
 ol, ul {
 	list-style: none;
